# v1.0.6 - ???
Features
1. Added scripts to build for Android.
2. Added ds_table module for tabular data (2D arrays).
3. Performance fixes to ds_str_cat().

Bugfixes
1. Bug in ds_str_substring() when substring is the length of entire source
   string.
2. ds_hmap_get() was not usable for checking existence of a key due to
   returning false if no value parameter was supplied.

# v1.0.5 - Thu 18 Feb 2021 16:53:25 SAST
Additions
1. Added a substring function to ds_str.h (ds_str_substring()).
2. Changed ds_arrays to use a length of size_t (previously used
   a length of uint16_t).
4. Changed interface of ds_array from `void **` to `ds_array_t *`
3. Clarified the usage of the datalen parameter in ds_hmap_set()
   in the headers.

# v1.0.4 - Sun 13 Dec 2020 10:03:46 SAST
Additions
1. Added property lists (ds_plist) module.

# v1.0.3 - Thu Aug 13 10:52:51 SAST 2020
Bugfixes
1. Array length was not updated when array was shrunk.
2. str_ltrim() bug with not properly null-terminating the result.

# v1.0.2 - Sun Dec 29 22:24:37 SAST 2019
Additions
1. Added ds_str_chsubst() functions for substituting characters in a string.
2. Added ds_str_strsubst() functions for substituting substrings in a string.
3. Added ds_str_trim() functions for removing leading and trailing whitespace.
4. Changed the ds_array implementation to address inefficiencies in the length
   storage.  The interface remains unchanged.

Bugfixes
1. ds_hmap_keys() now returns zero on error.
2. Changed the build system to use the one with the pretty colors. As a bonus
   there is now a build.config file to edit if things need to ever be changed.