@@ -3,6 +3,7 @@ Features
 1. Added scripts to build for Android.
 2. Added ds_table module for tabular data (2D arrays).
 3. Performance fixes to ds_str_cat().
+4. Added iteration function for ds_hmap_t objects.
 
 Bugfixes
 1. Bug in ds_str_substring() when substring is the length of entire source
